# 2DGameEngine

./: CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
assets/scripts/: Level1.lua  Level2.lua
assets/tilemaps/: jungle.map  jungle.tmx  jungle.tsx
include/: Game.h  LevelLoader.h  Logger.h
include/AssetStore/: AssetStore.h
include/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  DamageAnimationComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
include/ECS/: ECS.h
include/EventBus/: Event.h  EventBus.h
include/Events/: CollisionEvent.h  KeyPressedEvent.h  KeyReleasedEvent.h
include/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageAnimationSystem.h  DamageSystem.h  GUIRenderSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
src/: Game.cpp  LevelLoader.cpp  Logger.cpp  Main.cpp
src/AssetStore/: AssetStore.cpp
src/ECS/: ECS.cpp
